--- a/public/components/lp-refine-tools/lp-refine-tools.css
+++ b/public/components/lp-refine-tools/lp-refine-tools.css
@@ -1,6 +1,9 @@
 :host {
   display: block;
 
+  min-width: 600px;
+	min-height: 300px;
+
   margin-top: 50px;
 
 	background: #fff;
